# sword-health-challenge

./: .gitignore  EDA.ipynb  EXERCISE 1 - NPS.sql  EXERCISE 2 - read_txt.py  README.md  pyproject.toml  sword.db
img/: design.drawio
